# MusicIT

./: .project  MusicIT.cabal  README.md  interface.glade
src/: Main.hs
