name:           MusicIT
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         reis

executable MusicIT
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   ALUT >=2.2.0 && <2.3,
                   gtk >=0.12.4 && <0.13,
                   random >=1.0.1 && <1.1
  ghc-options:     -Wall

